@@ -1151,7 +1151,7 @@ SSML tag <mark/>.
 @example
 703-msg_id
 703-client_id
-703 CANCEL
+703 CANCELED
 @end example
 
 @item PAUSE
